# pavlov_mini_with_ros2

./: .gitignore  README.md
src/pavlov_control/: CMakeLists.txt  package.xml
src/pavlov_control/config/: controller_params.yaml  ros2_controllers.yaml
src/pavlov_control/launch/: pavlov_control.launch.py
src/pavlov_control/src/: gait_controller.py  gait_scheduler.cpp  keyboard_teleop.py  main_controller_node.cpp  pavlov_controller_node.cpp  simple_step.cpp  test_stance.cpp  walking_controller.cpp
src/pavlov_description/: CMakeLists.txt  package.xml
src/pavlov_description/launch/: display.launch.py  gazebo.launch.py
src/pavlov_description/rviz/: rviz_config.rviz
src/pavlov_description/urdf/: pavlov_mini.urdf.xacro  pavlov_mini_ros2_control.xacro
src/pavlov_gait/: CMakeLists.txt  package.xml
src/pavlov_gazebo/: CMakeLists.txt  package.xml
src/pavlov_gazebo/config/: ros2_control.yaml
src/pavlov_gazebo/launch/: spawn_robot.launch.py
src/pavlov_gazebo/worlds/: empty.world  pavlov_world.world
src/towr_ros2_demo/: CMakeLists.txt  package.xml
src/towr_ros2_demo/include/towr_ros2_demo/: pavlov_mini_model.h
src/towr_ros2_demo/src/: towr_node.cpp
